k8s/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lbeapp
  labels:
    app: lbeapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lbeapp
  template:
    metadata:
      labels:
        app: lbeapp
    spec:
      containers:
        - name: lbecontainer
          image:  lbecontainer.azurecr.io/deepaklightbulbeffectproject:latest
          ports:  # Correct indentation here
            - containerPort: 8080
