k8s/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lbe-service
spec:
  selector:
    app: qlbeapp
  ports:
    - protocol: TCP
      port: 80  # Service port
      targetPort: 80  # Container port
  type: LoadBalancer  # For external access
